# ChurnLabs

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  netlify.toml  pyproject.toml
api/: Dockerfile  config.py  main.py  schema.py  utils.py
config/: artifacts-config.yaml  data-config.yaml  huggingface-config.yaml  model-config.yaml  training-config.yaml
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json
frontend/src/: App.css  App.tsx
notebooks/: 01_eda.ipynb  02_model.ipynb
scripts/: run_ingestion.py  run_preprocessing.py  run_training.py
src/churnlabs/core/: config.py  logger.py  settings.py
src/churnlabs/data/: export.py  ingestion.py  loaders.py  preprocessor.py
src/churnlabs/features/: split.py
src/churnlabs/models/: artifact.py  builder.py  encoder.py  evaluation.py  loader.py  pipeline.py  transformer.py  uploader.py
