[project]
name = "churnlabs"
version = "0.1.0"
description = "End-to-End Customer Churn Prediction & Retention System"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# Main libraries required to run the project
dependencies = [
    "fastapi>=0.128.1",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=2.0.0,<3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
    "pyarrow>=14.0.0,<23",
    "protobuf>=3.20.3,<4.0.0",
    "setuptools<81",
    "mlflow>=3.10.0",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "huggingface-hub>=1.8.0",
]

# Extra libraries used only for development, not needed in production
# Install them with : uv sync --extra dev
[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "lab>=8.8",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]